--- a/home.html
+++ b/home.html
@@ -38,9 +38,21 @@
                 </div>
             </div>
         </nav>
-        <div id="hightlight">
+        <div id="hl">
             <div class="container">
-
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <h1><span>Programing Class</span></h1>
+                        <div id="garis"></div>
+                        <h5><span>Programing Class merupakan kegiatan untuk mewadahi mahasiswa Sistem Informasi UIN Jakarta, khususnya dalam bahasa pemograman. Selain itu, kegiatan ini juga bertujuan untuk menggali potensi yang dimiliki oleh peserta dan dapat meningkatkan prestasi mahasiswa SI UIN Jakarta.</span></h5>
+                        <button class="btn_hl"><span>Daftar Segera</span></button>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="hl_img">
+                            <img src="assets/image/hl_img.png">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
