update home, add page yg lain

--- a/event.html
+++ b/event.html
@@ -7,6 +7,7 @@
         <title>Event HIMSI | HIMSI UIN JAKARTA</title>
         <link rel="shortcut icon" href="assets/image/dadi.png">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/scss/main.css">
     </head>
 
@@ -26,10 +27,10 @@
                             <a class="nav-link" href="/profil_himsi.html"><span> Profil HIMSI </span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/event.html"><span> Event </span></a>
+                            <a class="nav-link" href="/berita_himsi.html"><span> Berita HIMSI </span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/berita_himsi.html"><span> Berita HIMSI </span></a>
+                            <a class="nav-link" href="/event.html"><span> Event </span></a>
                         </li>
                         <li class="nav-item-button">
                             <button class="btn_kontak"><span>Login</span></button>
@@ -60,6 +61,36 @@
         <div id="karakter">
             <div class="container">
                 
+            </div>
+        </div>
+        <div id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-desc">
+                        <div class="col-md-6 sm-12">
+                            <img src="assets/image/HIMSI.png" width="auto" height="60" alt="img ga ada">
+                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p></p>
+                        </div>
+                    </div>
+                    <div class="footer-follow">
+                        <div class="col-md-6 sm-12">
+                            <p>Follow us At</p>
+                            <div id="garis"></div>
+                            <p class="footer-sosmed">
+                                <a href="https://www.linkedin.com/in/dadi-ilham-setiadi-a22aa5155/"><i class="fa fa-twitter fa-lg"></i></a>
+                                <a href="https://www.instagram.com/idadhamz/"><i class="fa fa-instagram fa-lg"></i></a>
+                                <a href="https://github.com/idadhamz"><i class="fa fa-facebook fa-lg"></i></a>
+                                <a href="https://github.com/idadhamz"><i class="fa fa-youtube fa-lg"></i></a>
+                            </p>
+                            <p>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6763140557846!2d106.75042441397973!3d-6.306188995436004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69efdeac1b16ad%3A0x15d6f029c44e483f!2sScience+and+Technology+Faculty!5e0!3m2!1sen!2sid!4v1561810977162!5m2!1sen!2sid" 
+                                width="450" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="border-top:1px solid #eee; margin: 30px 50px 0px 50px"></div>
+                <p class="footer-end">© <script>document.write(new Date().getFullYear());</script> HIMSI UIN JAKARTA</p>
             </div>
         </div>
     </body>
