--- a/home.html
+++ b/home.html
@@ -27,10 +27,10 @@
                             <a class="nav-link" href="/profil_himsi.html"><span> Profil HIMSI </span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/event.html"><span> Event </span></a>
+                            <a class="nav-link" href="/berita_himsi.html"><span> Berita HIMSI </span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/berita_himsi.html"><span> Berita HIMSI </span></a>
+                            <a class="nav-link" href="/event.html"><span> Event </span></a>
                         </li>
                         <li class="nav-item-button">
                             <button class="btn_kontak"><span>Login</span></button>
@@ -51,19 +51,9 @@
                         <div class="text-hl">
                             <h1><span>Himpunan Sistem Informasi</span></h1>
                             <div id="garis"></div>
-                            <h5><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan.</h5>
+                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan.</p>
                             <a href="/profil_himsi.html" class="btn_hl"><span>Lihat lebih detail..</span></a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="event">
-            <div class="container">
-                <div class="row">
-                    <div class="text-event">
-                        <h1><span>Event</span></h1>
-                        <div id="garis"></div>
                     </div>
                 </div>
             </div>
@@ -75,18 +65,36 @@
                         <h1><span>Berita <span>HIMSI</span></span></h1>
                         <div id="garis"></div>
                     </div>
-                    <div class="content-berita">
+                </div>
+            </div>
+        </div>
+        <div id="event">
+            <div class="container">
+                <div class="row">
+                    <div class="text-event">
+                        <h1><span>Event</span></h1>
+                        <div id="garis"></div>
+                    </div>
+                    <div class="content-event">
                         <div class="row">
                             <div class="col-md-4 sm-12">
                                 <div class="card h-100">
                                     <img class="card-img-top" src="/assets/image/orbit.png" width="392" height="214" alt="Card image cap">
                                     <div class="card-body">
-                                        <div class="jenis-berita">
-                                            <h5 class="jenis-berita-text">Info</h5>
+                                        <div class="jenis-event">
+                                            <h5 class="jenis-event-text">Info</h5>
                                         </div>
                                         <h5 class="card-title">Beasiswa DJARUM 2019</h5>
-                                        <p class="card-text">Beasiswa yang diadakan oleh Djarum Foundation dengan berkerja sama dengan Universitas Islam Negeri Syarif Hidayatullah Jakarta. </p>
+                                        <p class="card-text">Beasiswa yang diadakan oleh Djarum Foundation dengan berkerja sama dengan Universitas Islam Negeri Syarif Hidayatullah Jakarta. sama dengan Universitas Islam Negeri Syarif Hidayatullah Jakarta. </p>
                                         <a href="#" class="btn btn-primary">Baca Selengkapnya...</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h5 class="person-text"><i class="fa fa-user fa-lg"></i>Dadi Ilham Setiadi</h5>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <h5 class="date-text"><i class="fa fa-calendar fa-lg"></i>30 Juni 2019</h5>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -94,12 +102,20 @@
                                 <div class="card h-100">
                                     <img class="card-img-top" src="/assets/image/orbit.png" width="392" height="214" alt="Card image cap">
                                     <div class="card-body">
-                                        <div class="jenis-berita">
-                                            <h5 class="jenis-berita-text">Acara</h5>
+                                        <div class="jenis-event">
+                                            <h5 class="jenis-event-text">Acara</h5>
                                         </div>
                                         <h5 class="card-title">BUBAKSO 2019</h5>
-                                        <p class="card-text">Buka bersama lintas angkatan dan bakti sosial ini diadakan rutin setiap bulan puasa.</p>
+                                        <p class="card-text">Buka bersama lintas angkatan dan bakti sosial ini diadakan rutin setiap bulan puasa. Buka bersama lintas angkatan dan bakti sosial ini diadakan rutin setiap bulan puasa. Buka bersama lintas angkatan dan bakti sosial ini diadakan rutin setiap bulan puasa.</p>
                                         <a href="#" class="btn btn-primary">Baca Selengkapnya...</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h5 class="person-text"><i class="fa fa-user fa-lg"></i>Dadi Ilham Setiadi</h5>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <h5 class="date-text"><i class="fa fa-calendar fa-lg"></i>30 Juni 2019</h5>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -107,12 +123,20 @@
                                 <div class="card h-100">
                                     <img class="card-img-top" src="/assets/image/orbit.png" width="392" height="214" alt="Card image cap">
                                     <div class="card-body">
-                                        <div class="jenis-berita">
-                                            <h5 class="jenis-berita-text">Artikel</h5>
+                                        <div class="jenis-event">
+                                            <h5 class="jenis-event-text">Artikel</h5>
                                         </div>
                                         <h5 class="card-title">Popularitas Data Analyst</h5>
-                                        <p class="card-text">Data analyst saat ini sangat populer karena banyak dibutuhkan oleh perusahaan - perusahaan dalam menganalisis datanya.</p>
+                                        <p class="card-text">Data analyst saat ini sangat populer karena banyak dibutuhkan oleh perusahaan - perusahaan dalam menganalisis datanya. banyak dibutuhkan oleh perusahaan - perusahaan dalam menganalisis datanya.</p>
                                         <a href="#" class="btn btn-primary">Baca Selengkapnya...</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h5 class="person-text"><i class="fa fa-user fa-lg"></i>Dadi Ilham Setiadi</h5>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <h5 class="date-text"><i class="fa fa-calendar fa-lg"></i>30 Juni 2019</h5>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +144,7 @@
                         <div class="row">
                             <div class="col-md-12 sm-12">
                                 <div class="wrapper">
-                                    <a href="/berita_himsi.html" class="btn-all-berita"><span>Lihat semua..</span></a>
+                                    <a href="/event.html" class="btn-all-event"><span>Lihat semua..</span></a>
                                 </div>
                             </div>
                         </div>
