--- a/home.html
+++ b/home.html
@@ -62,8 +62,35 @@
             <div class="container">
                 <div class="row">
                     <div class="text-berita">
-                        <h1><span>Berita <span>HIMSI</span></span></h1>
+                        <h1><span>E-News <span>HIMSI</span></span></h1>
                         <div id="garis"></div>
+                    </div>
+                    <div class="content-berita">
+                        <div class="row">
+                            <div class="col-md-6" style="border: 1px solid blue;height: auto;">
+                                <div class="mr-1">
+                                    <h1>Berita 1</h1>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="ml-1">
+                                    <div class="mb-1">
+                                        <div class="row">
+                                            <div class="col-md-12" style="border: 1px solid red;height: 200px;">
+                                                <h1>Berita 2</h1>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="mt-1">
+                                        <div class="row">
+                                            <div class="col-md-12" style="border: 1px solid green;height: 200px;">
+                                                <h1>Berita 3</h1>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
