--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="content-berita">
                         <div class="row">
-                            <div class="col-md-6" style="border: 1px solid blue;height: auto;">
+                            <div class="col-md-6" style="background-color:blue;height: auto;">
                                 <div class="mr-1">
                                     <h1>Berita 1</h1>
                                 </div>
@@ -76,14 +76,14 @@
                                 <div class="ml-1">
                                     <div class="mb-1">
                                         <div class="row">
-                                            <div class="col-md-12" style="border: 1px solid red;height: 200px;">
+                                            <div class="col-md-12" style="background-color:red;height: 200px;">
                                                 <h1>Berita 2</h1>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="mt-1">
                                         <div class="row">
-                                            <div class="col-md-12" style="border: 1px solid green;height: 200px;">
+                                            <div class="col-md-12" style="background-color: green;height: 200px;">
                                                 <h1>Berita 3</h1>
                                             </div>
                                         </div>
