--- a/home.html
+++ b/home.html
@@ -39,13 +39,13 @@
                 </div>
             </div>
         </nav>
-        <div id="hl">
+        <div id="hl" class="pb-5 pt-2">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <div class="img-hl">
-                            <img class="img-fluid" src="assets/image/hl_img.png">
-                        </div>
+                    <div class="col-md-6 col-sm-12 ">
+                        <!-- <div class="img-hl"> -->
+                            <img class="img-fluid" height="300" src="assets/image/hl_img.png">
+                        <!-- </div> -->
                     </div>
                     <div id="text-hl" class="col-md-6 col-sm-12">
                         <!-- <div class="text-hl"> -->
@@ -97,7 +97,7 @@
         </div>
         <div id="event">
             <div class="container">
-                <div class="row">
+                <!-- <div class="row"> -->
                     <div class="text-event">
                         <h1><span>Event</span></h1>
                         <div id="garis"></div>
@@ -176,7 +176,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
         <div id="footer">
@@ -195,9 +195,9 @@
                             <a href="https://github.com/idadhamz"><i class="fa fa-facebook fa-lg"></i></a>
                             <a href="https://github.com/idadhamz"><i class="fa fa-youtube fa-lg"></i></a>
                         </div>
-                        <div>
-                            <iframe class="img-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6763140557846!2d106.75042441397973!3d-6.306188995436004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69efdeac1b16ad%3A0x15d6f029c44e483f!2sScience+and+Technology+Faculty!5e0!3m2!1sen!2sid!4v1561810977162!5m2!1sen!2sid" 
-                            width="450" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe  class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6763140557846!2d106.75042441397973!3d-6.306188995436004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69efdeac1b16ad%3A0x15d6f029c44e483f!2sScience+and+Technology+Faculty!5e0!3m2!1sen!2sid!4v1561810977162!5m2!1sen!2sid" 
+                             frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
