--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
         <div id="hl">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-5 col-sm-12">
+                    <div class="col-sm-12 col-md-5">
                         <div class="img-hl">
                             <img src="assets/image/hl_img.png">
                         </div>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="content-berita">
                         <div class="row">
-                            <div class="col-md-6" style="background-color:blue;height: auto;">
+                            <div class="col-md-6" style="background-color:yellow;height: auto;">
                                 <div class="mr-1">
                                     <h1>Berita 1</h1>
                                 </div>
