--- a/berita_himsi.html
+++ b/berita_himsi.html
@@ -66,26 +66,22 @@
         <div id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="footer-desc">
-                        <div class="col-md-6 sm-12">
-                            <img src="assets/image/HIMSI.png" width="auto" height="60" alt="img ga ada">
-                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p></p>
-                        </div>
+                    <div id="footer-desc" class="col-md-6 sm-12">
+                        <img src="assets/image/HIMSI.png" width="auto" height="60" alt="img ga ada">
+                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p></p>
                     </div>
-                    <div class="footer-follow">
-                        <div class="col-md-6 sm-12">
-                            <p>Follow us At</p>
-                            <div id="garis"></div>
-                            <p class="footer-sosmed">
-                                <a href="https://www.linkedin.com/in/dadi-ilham-setiadi-a22aa5155/"><i class="fa fa-twitter fa-lg"></i></a>
-                                <a href="https://www.instagram.com/idadhamz/"><i class="fa fa-instagram fa-lg"></i></a>
-                                <a href="https://github.com/idadhamz"><i class="fa fa-facebook fa-lg"></i></a>
-                                <a href="https://github.com/idadhamz"><i class="fa fa-youtube fa-lg"></i></a>
-                            </p>
-                            <p>
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6763140557846!2d106.75042441397973!3d-6.306188995436004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69efdeac1b16ad%3A0x15d6f029c44e483f!2sScience+and+Technology+Faculty!5e0!3m2!1sen!2sid!4v1561810977162!5m2!1sen!2sid" 
-                                width="450" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-                            </p>
+                    <div id="footer-follow" class="col-md-6 sm-12 pt-5 pl-5">
+                        <p>Follow us At</p>
+                        <div id="garis"></div>
+                        <div class="footer-sosmed">
+                            <a href="https://www.linkedin.com/in/dadi-ilham-setiadi-a22aa5155/"><i class="fa fa-twitter fa-lg"></i></a>
+                            <a href="https://www.instagram.com/idadhamz/"><i class="fa fa-instagram fa-lg"></i></a>
+                            <a href="https://github.com/idadhamz"><i class="fa fa-facebook fa-lg"></i></a>
+                            <a href="https://github.com/idadhamz"><i class="fa fa-youtube fa-lg"></i></a>
+                        </div>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe  class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6763140557846!2d106.75042441397973!3d-6.306188995436004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69efdeac1b16ad%3A0x15d6f029c44e483f!2sScience+and+Technology+Faculty!5e0!3m2!1sen!2sid!4v1561810977162!5m2!1sen!2sid" 
+                             frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
