--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
                         <div class="row">
                             <div class="col-md-4 sm-12 mb-5">
                                 <div class="card h-100">
-                                    <img class="card-img-top" src="/assets/image/orbit.png" width="392" height="214" alt="Card image cap">
+                                    <img class="card-img-top" src="assets/image/orbit.png" width="392" height="214" alt="Card image cap">
                                     <div class="card-body">
                                         <div class="jenis-event">
                                             <h5 class="jenis-event-text">Info</h5>
@@ -127,7 +127,7 @@
                             </div>
                             <div class="col-md-4 sm-12 mb-5">
                                 <div class="card h-100">
-                                    <img class="card-img-top" src="/assets/image/orbit.png" width="392" height="214" alt="Card image cap">
+                                    <img class="card-img-top" src="assets/image/orbit.png" width="392" height="214" alt="Card image cap">
                                     <div class="card-body">
                                         <div class="jenis-event">
                                             <h5 class="jenis-event-text">Acara</h5>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="col-md-4 sm-12 mb-5">
                                 <div class="card h-100">
-                                    <img class="card-img-top" src="/assets/image/orbit.png" width="392" height="214" alt="Card image cap">
+                                    <img class="card-img-top" src="assets/image/orbit.png" width="392" height="214" alt="Card image cap">
                                     <div class="card-body">
                                         <div class="jenis-event">
                                             <h5 class="jenis-event-text">Artikel</h5>
