--- a/home.html
+++ b/home.html
@@ -67,23 +67,25 @@
                     </div>
                     <!-- <div class="content-berita"> -->
                         <div class="row">
-                            <div class="col-md-6" style="background-color:yellow;height: auto;">
+                            <div class="col-md-6">
+                                <img src="assets/image/orbit.png" width="100%" height="auto"></img>
                                 <div class="mr-1">
-                                    <h1>Berita 1</h1>
+                                    <!-- <h1>Berita 1</h1> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="ml-1">
                                     <div class="mb-1">
                                         <div class="row">
-                                            <div class="col-md-12" style="background-color:red;height: 200px;">
+                                            <div class="col-md-12" style="background-color:red;height: auto;">
                                                 <h1>Berita 2</h1>
+                                                <!-- <img src="assets/image/orbit.png" width="100%" height="200px"></img> -->
                                             </div>
                                         </div>
                                     </div>
                                     <div class="mt-1">
                                         <div class="row">
-                                            <div class="col-md-12" style="background-color: green;height: 200px;">
+                                            <div class="col-md-12" style="background-color: green;height: auto;">
                                                 <h1>Berita 3</h1>
                                             </div>
                                         </div>
@@ -186,7 +188,7 @@
                         <img src="assets/image/HIMSI.png" width="auto" height="60" alt="img ga ada">
                         <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p></p>
                     </div>
-                    <div id="footer-follow" class="col-md-6 sm-12 pt-5 pl-5">
+                    <div id="footer-follow" class="col-md-6 sm-12 pt-5">
                         <p>Follow us At</p>
                         <div id="garis"></div>
                         <div class="footer-sosmed">
