--- a/profil_himsi.html
+++ b/profil_himsi.html
@@ -46,7 +46,15 @@
                     <div id="garis"></div>
                 </div>
                 <div class="content-profil-himsi">
-                    <!-- <img src=""></img> -->
+                    <!-- <div class="row">
+                        <div class="col-md-7 col-sm-12">
+                            <img src="assets/image/HIMSI.jpeg"></img>
+                        </div>
+                        <div class="col-md-5 col-sm-12 my-auto">
+                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at 17 Oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p>
+                        </div>
+                    </div> -->
+                    <img src="assets/image/HIMSI_all.png"></img>
                     <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at 17 Oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p>
                 </div>
             </div>
@@ -54,38 +62,56 @@
         <div id="visi-misi-himsi">
             <div class="container">
                 <div class="text-visi-misi-himsi">
-                    <h1><span>Visi</span></h1>
+                    <h1><span>Tujuan dan Fungsi <br><span>HIMSI</span></span></h1>
                     <div id="garis"></div>
                 </div>
                 <div class="content-visi-misi-himsi">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6"">
-                            <!-- <img src=""></img> -->
-                            
+                        <div class="col-sm-12 col-md-4">
+                            <img src="assets/image/Visi.png"></img>
                         </div>
-                        <div class="col-sm-12 col-md-6"">
+                        <div class="col-sm-12 col-md-8 my-auto">
                             <!-- <img src=""></img> -->
-                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at 17 Oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p>
+                            <h2 class="tujuan_fungsi"><span>Tujuan</span></h2>
+                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-8 my-auto">
+                            <!-- <img src=""></img> -->
+                            <h2 class="tujuan_fungsi"><span>Fungsi</span></h2>
+                            <p>Fungsi <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> adalah sebagai berikut:</p>
+                            <ul>
+                                <li>Wadah dan Sarana pembinaan kepribadian <span>Mahasiswa Sistem Informasi UIN Syarif Hidayatullah Jakarta</span></li>
+                                <li>Wadah dan Sarana pengembangan disiplin keilmuan dan kecendikiawan</li>
+                                <li>Wadah dan Sarana pengembangan solidaritas sosial dalam bentuk pengabdian kepada masyarakat.</li>
+                                <li>Wadah dan Sarana pemersatu <span>Mahasiswa Sistem Informasi.</span></li>
+                                <li>Wadah san Sarana pengembangan visi dan misi <span>Mahasiswa Sistem Informasi UIN Syarif Hidayatullah Jakarta yang berlandaskan moral.</span></li>
+                                <li>Wadah dalam memperjuangkan hak <span>Mahasiswa Sistem Informasi UIN Syarif Hidayatullah Jakarta yang tidak bertentangan dengan kode etik mahasiswa.</span></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <img src="assets/image/Misi.png"></img>
                         </div>
                     </div>
                 </div>
-                <div class="text-visi-misi-himsi">
+                <!-- <div class="text-visi-misi-himsi">
                     <h1><span>Misi</span></h1>
                     <div id="garis"></div>
                 </div>
                 <div class="content-visi-misi-himsi">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6">
+                        <div class="col-sm-12 col-md-6 my-auto"> -->
                             <!-- <img src=""></img> -->
-                            <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at 17 Oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p>
+                            <!-- <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at 17 Oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p>
                         </div>
-                        <div class="col-sm-12 col-md-6"">
+                        <div class="col-sm-12 col-md-6"> -->
                             <!-- <img src=""></img> -->
+                            <!-- <img src="assets/image/Misi.png"></img>
                             
                         </div>
                     </div>
-                </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div id="footer">
@@ -95,7 +121,7 @@
                         <img src="assets/image/HIMSI.png" width="auto" height="60" alt="img ga ada">
                         <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> didirikan pada hari jum’at, 17 oktober 2003, bertempat di Fakultas Sains dan Teknologi UIN Syarif Hidayatullah Jakarta. <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bersifat independen, kebebasan akademik, kebenaran ilmiah, kesetaraan keilmuan yang kolektif serta penuh keterbukaan dan keadilan</p></p>
                     </div>
-                    <div id="footer-follow" class="col-md-6 sm-12 pt-5 pl-5">
+                    <div id="footer-follow" class="col-md-6 sm-12 pt-5">
                         <p>Follow us At</p>
                         <div id="garis"></div>
                         <div class="footer-sosmed">
@@ -116,5 +142,8 @@
         </div>
     </body>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </html>
