--- a/home.html
+++ b/home.html
@@ -67,26 +67,61 @@
                     </div>
                     <!-- <div class="content-berita"> -->
                         <div class="row">
-                            <div class="col-md-6">
-                                <img src="assets/image/orbit.png" width="100%" height="auto"></img>
+                            <div class="col-lg-8 col-md-7 d-none d-sm-none d-md-block" style="width: 100%;height: 400px; overflow: hidden;">
+                                <img style="object-fit: cover;width: 100%;height: 100%;" src="assets/image/HIMSI.jpeg"></img>
                                 <div class="mr-1">
                                     <!-- <h1>Berita 1</h1> -->
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="ml-1">
-                                    <div class="mb-1">
+                            <div class="col-lg-4 col-md-5 col-sm-12">
+                                <div class="row">
+                                    <div class="col-12 mb-3">
                                         <div class="row">
-                                            <div class="col-md-12" style="background-color:red;height: auto;">
-                                                <h1>Berita 2</h1>
-                                                <!-- <img src="assets/image/orbit.png" width="100%" height="200px"></img> -->
+                                            <div class="col-4"  style="width: 70px ;height: 70px;overflow: hidden;">
+                                                <img style="object-fit: cover;width: 100%;height: 100%;" src="assets/image/HIMSI.jpeg" alt="thumbnail">
+                                            </div>
+                                            <div class="col">
+                                                <p>Pengumuman Oprec Meet Up HIMSI 10 2019 </p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="mt-1">
+                                    <div class="col-12 mb-3">
                                         <div class="row">
-                                            <div class="col-md-12" style="background-color: green;height: auto;">
-                                                <h1>Berita 3</h1>
+                                            <div class="col-4"  style="width: 70px ;height: 70px;overflow: hidden;">
+                                                <img style="object-fit: cover;width: 100%;height: 100%;" src="assets/image/HIMSI.jpeg" alt="thumbnail">
+                                            </div>
+                                            <div class="col">
+                                                <p>Pengumuman Oprec Meet Up HIMSI 10 2019 </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <div class="row">
+                                            <div class="col-4"  style="width: 70px ;height: 70px;overflow: hidden;">
+                                                <img style="object-fit: cover;width: 100%;height: 100%;" src="assets/image/HIMSI.jpeg" alt="thumbnail">
+                                            </div>
+                                            <div class="col">
+                                                <p>Pengumuman Oprec Meet Up HIMSI 10 2019 </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <div class="row">
+                                            <div class="col-4"  style="width: 70px ;height: 70px;overflow: hidden;">
+                                                <img style="object-fit: cover;width: 100%;height: 100%;" src="assets/image/HIMSI.jpeg" alt="thumbnail">
+                                            </div>
+                                            <div class="col">
+                                                <p>Pengumuman Oprec Meet Up HIMSI 10 2019 </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <div class="row">
+                                            <div class="col-4"  style="width: 70px ;height: 70px;overflow: hidden;">
+                                                <img style="object-fit: cover;width: 100%;height: 100%;" src="assets/image/HIMSI.jpeg" alt="thumbnail">
+                                            </div>
+                                            <div class="col">
+                                                <p>Pengumuman Oprec Meet Up HIMSI 10 2019 </p>
                                             </div>
                                         </div>
                                     </div>
