--- a/event.html
+++ b/event.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-md bg-blue navbar-light">
+        <nav class="navbar navbar-expand-md bg-blue navbar-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="/home.html">
                     <img src="assets/image/HIMSI.png" alt="img ga ada">
