--- a/profil_himsi.html
+++ b/profil_himsi.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-md bg-blue navbar-light">
+        <nav class="navbar navbar-expand-md bg-blue navbar-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="/home.html">
                     <img src="assets/image/HIMSI.png" alt="img ga ada">
@@ -67,17 +67,17 @@
                 </div>
                 <div class="content-visi-misi-himsi">
                     <div class="row">
-                        <div class="col-md-6 col-sm-12">
+                        <div class="col-md-5 col-sm-12">
                             <img src="assets/image/Visi.png"></img>
                         </div>
-                        <div class="col-md-6 col-sm-12 my-auto">
+                        <div class="col-md-7 col-sm-12 my-auto">
                             <!-- <img src=""></img> -->
                             <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
                             <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
                         </div>
                     </div>
                     <div class="row d-flex">
-                        <div class="order-2 order-sm-1 col-sm-12 col-md-6 my-auto">
+                        <div class="order-2 order-sm-1 col-sm-12 col-md-7 my-auto">
                             <!-- <img src=""></img> -->
                             <!-- <h2 class="tujuan_fungsi"><span>Fungsi</span></h2> -->
                             <p>Fungsi <span>HIMSI UIN Syarif Hidayatullah Jakarta</span> adalah sebagai berikut:</p>
@@ -90,7 +90,7 @@
                                 <li>Wadah dalam memperjuangkan hak <span>Mahasiswa Sistem Informasi UIN Syarif Hidayatullah Jakarta yang tidak bertentangan dengan kode etik mahasiswa.</span></li>
                             </ul>
                         </div>
-                        <div class="order-1 order-sm-2 col-sm-12 col-md-6">
+                        <div class="order-1 order-sm-2 col-sm-12 col-md-5">
                             <img src="assets/image/Misi.png"></img>
                         </div>
                     </div>
@@ -255,6 +255,16 @@
             </div>
         </div>
     </body>
+
+    <script type="text/javascript">
+        // Navbar auto fixed-top
+        $(window).on('scroll', function(event) {
+            var scrollValue = $(window).scrollTop();
+            if (scrollValue == settings.scrollTopPx || scrollValue > 70) {
+                $('.navbarTop').addClass('fixed-top');
+            } 
+        });
+    </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
