--- a/profil_himsi.html
+++ b/profil_himsi.html
@@ -258,12 +258,14 @@
 
     <script type="text/javascript">
         // Navbar auto fixed-top
-        $(window).on('scroll', function(event) {
-            var scrollValue = $(window).scrollTop();
-            if (scrollValue == settings.scrollTopPx || scrollValue > 70) {
-                $('.navbarTop').addClass('fixed-top');
-            } 
-        });
+        // $( document ).ready(function() {
+        //     $(window).on('scroll', function(event) {
+        //         var scrollValue = $(window).scrollTop();
+        //         if (scrollValue == settings.scrollTopPx || scrollValue > 70) {
+        //             $('.navbar').addClass('fixed-top');
+        //         } 
+        //     });
+        // });
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
