--- a/event.html
+++ b/event.html
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-expand-md bg-blue navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="/home.html">
+                <a class="navbar-brand" href="/home.php">
                     <img src="assets/image/HIMSI.png" alt="img ga ada">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navcollapse" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse" id="navcollapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/profil_himsi.html"><span> Profil HIMSI </span></a>
+                            <a class="nav-link" href="/profil_himsi.php"><span> Profil HIMSI </span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/berita_himsi.html"><span> Berita HIMSI </span></a>
+                            <a class="nav-link" href="/berita_himsi.php"><span> Berita HIMSI </span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/event.html"><span> Event </span></a>
+                            <a class="nav-link" href="/event.php"><span> Event </span></a>
                         </li>
                         <li class="nav-item-button">
                             <button class="btn_kontak"><span>Login</span></button>
